--- a/src/main/resources/templates/user/RegisterView.html
+++ b/src/main/resources/templates/user/RegisterView.html
@@ -23,7 +23,7 @@
             <h1 class="logo-name" style="margin-left: -12%;">Dusty</h1>
         </div>
         <p>创建一个新账户</p>
-        <form id="registerForm" class="m-t" role="form" onsubmit="return register()">
+        <form id="registerForm" class="m-t" role="form" onsubmit="" method="post" action="/doRegister">
             <div class="form-group">
                 <input type="text" name="userName" class="form-control input-lg" placeholder="请输入用户名" required="">
             </div>
@@ -31,11 +31,11 @@
                 <input type="tel" name="phone" class="form-control input-lg" placeholder="请输入手机号码">
             </div>
             <div class="form-group">
-                <input type="password" name="password" class="form-control input-lg" placeholder="请输入密码" required="">
+                <input id="password" type="password" name="password" class="form-control input-lg" placeholder="请输入密码" required="">
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control input-lg" placeholder="请再次输入密码" required="">
-            </div>
+            <!--<div class="form-group">-->
+                <!--<input id="passwordConfig" type="password" class="form-control input-lg" placeholder="请再次输入密码" required="">-->
+            <!--</div>-->
             <!--<div class="form-group text-left">-->
                 <!--<div class="checkbox i-checks">-->
                     <!--<label class="no-padding">-->
@@ -50,26 +50,19 @@
 </div>
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/Jquery-form.js}"></script>
 <script>
-    function register() {
-        $.ajax({
-            type: "POST",
-            async:false,
-            url: "/doRegister",
-            data: $("#registerForm").serialize(),
-            dataType: "json",
-            contentType: "application/x-www-form-urlencoded;charset=utf-8",
-            success: function (ret) {
-                if(ret.code == "200") {
-                    window.location.href = 'http://www.dustyblog.cn';
-                } else {
-                    alert("注册失败 :" + ret.msg );
-                    // window.reload();
-                }
+    $(function(){
+        /** 验证是否登录成功  */
+        $("#registerForm").ajaxForm(function(data){
+            if(data.code=="200"){
+                alert("注册成功！");
+                window.location.replace("/login") ;
+            }else {
+                alert("注册失败 :" + data.msg );
             }
         });
-    }
-
+    });
 </script>
 </body>
 </html>
