--- a/src/main/resources/templates/user/RegisterView.html
+++ b/src/main/resources/templates/user/RegisterView.html
@@ -27,8 +27,8 @@
             <div class="form-group">
                 <input type="text" name="userName" class="form-control input-lg" placeholder="请输入用户名" required="">
             </div>
-            <div class="form-group">
-                <input type="tel" name="phone" class="form-control input-lg" placeholder="请输入手机号码">
+            <div class="form-group"><!--手机格式校验-->
+                <input id="mobile" type="tel" oninvalid="setCustomValidity('请输入正确格式的手机号码！');" pattern="^(0|86|17951)?(13[0-9]|15[012356789]|17[0678]|18[0-9]|14[57])[0-9]{8}$" name="phone" class="form-control input-lg" placeholder="请输入手机号码" required="">
             </div>
             <div class="form-group">
                 <input id="password" type="password" name="password" class="form-control input-lg" placeholder="请输入密码" required="">
@@ -53,7 +53,7 @@
 <script th:src="@{/js/Jquery-form.js}"></script>
 <script>
     $(function(){
-        /** 验证是否登录成功  */
+        /** 验证是否注册成功  */
         $("#registerForm").ajaxForm(function(data){
             if(data.code=="200"){
                 alert("注册成功！");
